# RPALite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-zh.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: bandit.yml  codeql.yml  python-package-dev.yml  python-package-publish.yml  python-package.yml  python-publish.yml  synopsys-io.yml
demo/python/: notepad.py
docs/en/python/: guide.md
docs/en/robot/: RPALite.html  guide.md
docs/robot/: RPALite.html
docs/zh/python/: guide.md
docs/zh/robot/: guide.md
examples/from_issues/login_button_on_webpage/: search_button.py
examples/python/: calculator_macos.py  firefox_linux.py  notepad.py  notes-mac.py  notes_macos.py
examples/robot-framework/: .gitignore  notepad.robot
src/RPALite/: __init__.py  easyocr_handler.py  image_handler.py  paddleocr_handler.py  rpalite.py
tests/unit/: test_arpa.py  test_image_handler.py  test_rpalite.py
